test/e2e/testdata/certificate-rotation-gateway.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: cert-rotation-proxy-config
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cert-rotation-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: cert-rotation-proxy-config
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-base-for-cert-rotation
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: cert-rotation-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /base-route
      backendRefs:
        - name: infra-backend-v1
          port: 8080
